[package]
name = "mazemaze-server"
version = "0.1.0"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.3.4" }
crossbeam = { version = "0.7"}
ordered-float = { version = "1.0" }
rand = { version = "0.7"}
rand_distr = { version = "0.2.2"}
