[package]
name = "net"
version = "0.0.0"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
bytes = { version = "1" }
parking_lot = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
